@@ -22,6 +22,7 @@ calculations."""
 import os
 import re
 import sys
+import copy
 import json
 import time
 import pickle
@@ -327,12 +328,12 @@ def create_jobs(job_inis, log_level=logging.INFO, log_file=None,
             dic = readinput.get_params(job_ini)
         dic['hazard_calculation_id'] = hc_id
         if 'sensitivity_analysis' in dic:
+            # this part is tested in commands_test and in oq-risk-tests
             analysis = valid.dictionary(dic['sensitivity_analysis'])
             for values in itertools.product(*analysis.values()):
-                jobdic = dic.copy()
+                jobdic = copy.deepcopy(dic)
                 pars = dict(zip(analysis, values))
-                for param, value in pars.items():
-                    jobdic[param] = str(value)
+                readinput.update(jobdic, pars.items(), dic['base_path'])
                 jobdic['description'] = '%s %s' % (dic['description'], pars)
                 new = logs.init('job', jobdic, log_level, log_file,
                                 user_name, hc_id, host)
